# platform

./: .gitignore  Cargo.toml  devbox.json  justfile  knope.toml  lefthook.yml  process-compose.yaml  rust-toolchain.toml
.changeset/: add_a_bit_more_documentation.md  add_a_bit_of_docs.md  clean_up_logging_output.md  configure_knope.md  default_to_json_data_as_a_means_of_transportation.md  document_in_http.md  fix_knope.md  improve_logging.md  introduce_knope.md  release_again.md  release_nodes_to_github.md  release_with_the_s_name.md  standardized_logging_and_bindings_across_all_nodes.md  testing_knope.md  trigger_a_release.md  use_instead_of_in_wasmcloudtoml_files.md
.github/workflows/: prepare-release.yaml  publish-nodes.yaml  release.yaml  test.yml
config/dev/: local-providers.yaml
config/devbox/flakes/knope/: flake.nix
crates/nodes/customer/: Cargo.toml
crates/nodes/customer/src/: lib.rs
crates/nodes/customer/wit/: world.wit
crates/nodes/in-http/: CHANGELOG.md  Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
crates/nodes/in-http/src/: lib.rs
crates/nodes/in-http/wit/: world.wit
crates/nodes/in-internal/: CHANGELOG.md  Cargo.toml  wasmcloud.toml
crates/nodes/in-internal/src/: lib.rs
crates/nodes/in-internal/wit/: world.wit
crates/nodes/out-http/: Cargo.toml  wasmcloud.toml
crates/nodes/out-http-webhook/: CHANGELOG.md  Cargo.toml  wasmcloud.toml
crates/nodes/out-http-webhook/src/: lib.rs
crates/nodes/out-http-webhook/wit/: world.wit
crates/nodes/out-http/src/: main.rs
crates/nodes/out-internal/: CHANGELOG.md  Cargo.toml  wasmcloud.toml
crates/nodes/out-internal/src/: lib.rs
crates/nodes/out-internal/wit/: world.wit
crates/nodes/out-log/: CHANGELOG.md  Cargo.toml  wasmcloud.toml
crates/nodes/out-log/src/: lib.rs
crates/pipeline-schema/examples/: pipeline-all.json  pipeline-architecture-diagram.json
crates/pipeline-schema/schemas/: combine.js  main.schema.json  package-lock.json  package.json  pipeline.schema.json  step.schema.json
crates/pipeline-schema/schemas/messaging/: messaging.schema.json
crates/pipeline-schema/schemas/nodes/: in-aws-s3.schema.json  in-http.schema.json  in-kafka.schema.json  in-postgres.schema.json  out-aws-s3.schema.json  out-kafka.schema.json  out-log.schema.json  out-postgres.schema.json
crates/schemas/pipeline/: Cargo.toml
crates/schemas/pipeline/src/: main.rs
crates/services/component-composer/: Cargo.toml
crates/services/component-composer/src/: main.rs
crates/services/infisical_secrets_provider/: .env.example  Cargo.toml  README.md  railway.json
crates/services/infisical_secrets_provider/examples/: deploy.sh  wadm.yaml
crates/services/infisical_secrets_provider/src/: backend.rs  config.rs  encryption.rs  infisical_client.rs  jwt.rs  main.rs  types.rs
crates/services/infra_manager/: .env.example  Cargo.toml  railway.json
crates/services/infra_manager/src/: config.rs  database.rs  infisical.rs  main.rs  nats.rs  railway.rs
crates/services/pipeline-manager/: Cargo.toml
crates/services/pipeline-manager/src/: config_converter.rs  main.rs
crates/services/pipeline_manager/: .env.example.toml  Cargo.toml  railway.json
crates/services/pipeline_manager/src/: config.rs  config_converter.rs  database.rs  lib.rs  main.rs  registry.rs  settings.rs  wadm.rs
crates/services/pipeline_manager/src/builders/: mod.rs
crates/services/pipeline_manager/src/builders/nodes/: mod.rs  registry.rs
crates/services/pipeline_manager/src/builders/nodes/in/: http_webhook.rs  mod.rs
crates/services/pipeline_manager/src/builders/nodes/processor/: mod.rs  wasm.rs
crates/services/pipeline_manager/src/builders/providers/: http_client.rs  http_server.rs  mod.rs  nats_messaging.rs  registry.rs
crates/shared/: CHANGELOG.md  Cargo.toml
crates/shared/src/: lib.rs
examples/01-hard-coded-wadm-no-custom-code/: Cargo.toml  local.wadm.yaml
examples/02-custom-component/: .gitignore  Cargo.toml  justfile  local.wadm.yaml  wasmcloud.toml
examples/02-custom-component/src/: lib.rs
examples/03-custom-component-links-only/: Cargo.toml  justfile  local-pipeline.wadm.yaml  local-providers.yaml  local.wadm.yaml
examples/03-custom-component-links-only/src/: lib.rs
examples/04-custom-component-links-only-multiple-versions/: Cargo.toml  justfile  local-1.wadm.yaml  local-2.wadm.yaml  local.wadm.yaml  wasmcloud.toml
examples/04-custom-component-links-only-multiple-versions/src/: lib.rs
examples/04-custom-component-links-only-multiple-versions/wit/: world.wit
examples/rust_custom_component/: Cargo.toml  wasmcloud.toml
examples/rust_custom_component/wit/: world.wit
