[workspace]
members = ["crates/nodes/*", "crates/schemas/*", "crates/services/*", "examples/*"]
resolver = "3"

[workspace.dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.19", features = ["json"] }
schemars = { version = "1.0.0", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = "11.0.1"
wasmbus-rpc = "0.15.0"
wasmcloud-component = "0.2.0"
wasmcloud-interface-messaging = "0.11.0"
wit-bindgen = "0.42.1"
wadm-client = "0.10.0"
