[profile.dev]
incremental = true

[workspace]
members = [
    "crates/nodes/customer",
    "crates/nodes/in-http",
    "crates/nodes/in-internal",
    "crates/nodes/out",
    "crates/nodes/out-http-webhook",
    "crates/nodes/out-internal",
    "crates/nodes/out-log",
    "crates/schemas/pipeline",
    "crates/services/infra_manager",
    "crates/services/pipeline_manager",
    "crates/shared",
]
resolver = "3"

[workspace.dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12.19", features = ["json"] }
schemars = { version = "1.0.0", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = {version = "11.0.1", features = ["serde-json-impl"]}
wadm-client = "0.10.0"
wash = "0.42.1"
wasmcloud-component = "0.2.0"
wit-bindgen = "0.43.0"