[package]
name = "infisical_secrets_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-nats = "0.34"
base64 = "0.22"
bytes = "1.10.1"
chrono.workspace = true
config.workspace = true
futures-util = "0.3"
infisical = "0.0.2"
nkeys = { version = "0.4", features = ["xkeys"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
uuid = { version = "1.0", features = ["v4"] }
