[package]
name = "infra_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
config.workspace = true
sqlx.workspace = true
tokio-postgres = "0.7"
anyhow = "1.0"
nkeys = "0.4"
nats-io-jwt = "0.1"
async-nats = "0.34"
base64 = "0.22"
infisical = "0.0.2"