[package]
name = "pipeline-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ts-rs.workspace = true
wadm-client.workspace = true
