[package]
name = "pipeline_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
chrono.workspace = true
config.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
shared = { path = "../../shared" , version = "0.1.2" }
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wadm-client.workspace = true
wash.workspace = true
